# twitter-api-clone

./: .flake8  README.md  cloudbuild.yaml  conftest.py  docker-compose.yml  entrypoint.sh  installed_packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cov.yml  deploy.yml  docker_ci.yml  flake8-problem-matcher.json  linter-formatter.yml  tests.yml
docker/app/: Dockerfile
docker/app-prod/: Dockerfile
docker/db/: Dockerfile
src/mysite/: .coverage  __init__.py  manage.py  pytest-coverage.txt  pytest.ini  pytest.xml
src/mysite/app/: models.py  serializers.py  urls.py  views.py
src/mysite/app/tests/: test_models.py
src/mysite/appxxx/: apps.py  models.py  urls.py  views.py
src/mysite/appxxx/migrations/: 0001_initial.py  0002_alter_post_created_at_alter_post_updated_at.py
src/mysite/appxxx/tests/: test_models.py  test_serializers.py  test_views.py
src/mysite/mysite/: asgi.py  settings.py  urls.py  wsgi.py
src/mysite/mysite/settings/: __init__.py  base.py  dev.py  development.py  local.py  production.py
src/mysite/mysite/urls/: base.py  local.py
