[tool.poetry]
name = "drf-twitter"
version = "0.1.0"
description = ""
authors = ["yu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"
Django = "4.2.9"
psycopg2 = "2.9.9"
psycopg2-binary = "2.9.9"
dj-database-url = "0.5.0"
djangorestframework = "3.14.0"
pytest = "8.3.3"
black = "24.10.0"
djangorestframework-simplejwt = "5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
